# gn-build

./: .gitignore  .gitmodules  .gn  BUILD.gn  README.md  main.cpp
app/: .gitignore
src/: BUILD.gn  test.cpp
src/cpp/: BUILD.gn  hello_shared.cpp  hello_shared.h
src/rust/: BUILD.gn  lib.rs
tools/llvm/: cr_build_revision  llvmobjdump_build_revision
tools/llvm/lib/: libstdc++.so.6
