# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

action("egui-demo") {
  script = "//app/egui-demo/compile.py"
  args = []
  outputs = [
    "$target_gen_dir/egui-demo.txt"
  ]
}

executable("hello") {
  sources = [ "main.cpp" ]

  include_dirs = [
    "//src/cpp",
  ]

  deps = [
    # "//src:c++_libraries",
    "//src/cpp:hello_shared",
    "//src/cpp:hello_static",
    "//src/rust:hello_rust",
  ]
}

