# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
shared_library("hello_shared") {
  sources = [
    "hello_shared.cpp",
    "hello_shared.h",
  ]
}

static_library("hello_static") {
  sources = [
    "hello_static.cpp",
    "hello_static.h",
  ]
}
